internal/gatewayapi/testdata/extensions/extensionpolicy-with-valid-target.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http1
      protocol: HTTP
      port: 81
      allowedRoutes:
        namespaces:
          from: All
    - name: http2
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
extServerPolicies:
- apiVersion: foo.example.io/v1alpha1
  kind: Bar
  metadata:
    name: test1
    namespace: envoy-gateway
  spec:
    targetRef:
      kind: Gateway
      group: gateway.networking.k8s.io
      name: gateway-1
    data: "attached to all listeners"
- apiVersion: foo.example.io/v1alpha1
  kind: Bar
  metadata:
    name: test2
    namespace: envoy-gateway
  spec:
    targetRef:
      kind: Gateway
      group: gateway.networking.k8s.io
      name: gateway-1
      sectionName: http2
    data: "attached only to listener on port 80"
