internal/gatewayapi/testdata/extensions/extensionpolicy-with-valid-target.out.yaml
extensionServerPolicies:
- apiVersion: foo.example.io/v1alpha1
  kind: Bar
  metadata:
    name: test2
    namespace: envoy-gateway
  spec:
    data: attached only to listener on port 80
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      sectionName: http2
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http2
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
- apiVersion: foo.example.io/v1alpha1
  kind: Bar
  metadata:
    name: test1
    namespace: envoy-gateway
  spec:
    data: attached to all listeners
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http1
      port: 81
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: http2
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http1
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http2
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - name: envoy-gateway/gateway-1/http1
        ports:
        - containerPort: 10081
          name: http-81
          protocol: HTTP
          servicePort: 81
      - name: envoy-gateway/gateway-1/http2
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: ""
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    extensionResources:
    - name: foo.example.io/bar/envoy-gateway/test2
      object:
        apiVersion: foo.example.io/v1alpha1
        kind: Bar
        metadata:
          name: test2
          namespace: envoy-gateway
        spec:
          data: attached only to listener on port 80
          targetRef:
            group: gateway.networking.k8s.io
            kind: Gateway
            name: gateway-1
            sectionName: http2
        status:
          ancestors:
          - ancestorRef:
              group: gateway.networking.k8s.io
              kind: Gateway
              name: gateway-1
              namespace: envoy-gateway
              sectionName: http2
            conditions:
            - lastTransitionTime: null
              message: Policy has been accepted.
              reason: Accepted
              status: "True"
              type: Accepted
            controllerName: gateway.envoyproxy.io/gatewayclass-controller
    - name: foo.example.io/bar/envoy-gateway/test1
      object:
        apiVersion: foo.example.io/v1alpha1
        kind: Bar
        metadata:
          name: test1
          namespace: envoy-gateway
        spec:
          data: attached to all listeners
          targetRef:
            group: gateway.networking.k8s.io
            kind: Gateway
            name: gateway-1
        status:
          ancestors:
          - ancestorRef:
              group: gateway.networking.k8s.io
              kind: Gateway
              name: gateway-1
              namespace: envoy-gateway
            conditions:
            - lastTransitionTime: null
              message: Policy has been accepted.
              reason: Accepted
              status: "True"
              type: Accepted
            controllerName: gateway.envoyproxy.io/gatewayclass-controller
    extensionServerPolicies:
    - name: foo.example.io/bar/envoy-gateway/test2
    - name: foo.example.io/bar/envoy-gateway/test1
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    http:
    - address: 0.0.0.0
      extensionRefs:
      - name: foo.example.io/bar/envoy-gateway/test1
      externalPort: 81
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http1
      name: envoy-gateway/gateway-1/http1
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10081
    - address: 0.0.0.0
      extensionRefs:
      - name: foo.example.io/bar/envoy-gateway/test2
      - name: foo.example.io/bar/envoy-gateway/test1
      externalPort: 80
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http2
      name: envoy-gateway/gateway-1/http2
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
